# pml

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  Test_Block.cc  Test_Matrix.cc  Test_Tensor.cc  Test_Vector.cc  compile_all  compile_tests  index.html  install  params.json  pml.hpp  run_tests  test
etc/: hamlet.txt  hist_plot.py  plot_dm_bcpm.py  plot_em_test.py  plot_gp_bcpm.py  plot_pg_results.py  test_hmm.py
etc/python/pml/: README.txt  setup.py
etc/python/pml/pml/: __init__.py  pml.py
etc/simulator_logs/: log_high_250.txt  log_high_250_cps.txt  log_high_50.txt  log_high_50_cps.txt  log_low_250.txt  log_low_250_cps.txt  log_low_50.txt  log_low_50_cps.txt
include/: pml.hpp  pml_block.hpp  pml_matrix.hpp  pml_memory.hpp  pml_random.hpp  pml_special.hpp  pml_time.hpp  pml_utils.hpp  pml_vector.hpp  pml_vector_view.hpp
include/ml/: pml_bcpm.hpp  pml_hmm.hpp  pml_nmf.hpp
matlab/: cmpe58n_eval_mogamma.m  cmpe58n_mcp_update.m  cmpe58n_mult_gampot.m  deneme.m  deneme.m~  gen_data.m  inference.m  inference.m~  pathdef.m  visualize.m
python/pml/: pml.py  setup.py
src/: CMakeLists.txt  Test_Block.cc  Test_Matrix.cc  Test_Tensor.cc  Test_Vector.cc  pml.hpp  pml2.hpp  pml_array.hpp  pml_bcpm.hpp  pml_hmm.hpp  pml_lds.hpp  pml_linalg.hpp  pml_matrix.hpp  pml_new.hpp  pml_nmf.hpp  pml_old.hpp  pml_opt.hpp  pml_rand.hpp  pml_random.hpp  pml_special.hpp  pml_tensor.hpp  pml_utils.hpp  pml_vector.hpp
src/ml/: pml_bcpm.hpp  pml_hmm.hpp  pml_nmf.hpp
test/: CMakeLists.txt  TestAlgebra.cc  TestArray.cc  TestBCPM.cc  TestHMM.cc  TestLDS.cc  TestMatrix.cc  TestNMF.cc  TestObjects.cc  TestRandom.cc  TestTensor.cc  TestVector.cc  test_bcpm.cc  test_block.cc  test_hmm.cc  test_matrix.cc  test_memory.cc  test_nmf.cc  test_random.cc  test_special.cc  test_speed.cc  test_tensor.cc  test_vector.cc  test_vector_view.cc
test/matlab/: compute_ss.m  eval_mogamma.m  evaluate.m  gamma_est.m  gen_data.m  inference.m  learn.m  log_sum_exp.m  mcp_update.m  mult_gampot.m  normalize.m  normalize_exp.m  saveTxt.m  visualize.m
test/python/: debug_bpcm.py  test_bcpm_dm.py  test_bcpm_g.y.py  test_bcpm_pg.py  test_hmm.py  test_nmf.py  visualizeCoupledPoissonReset.py  visualizeMultinomialReset.py  visualizePoissonReset.py  visualize_pg_em.py
